--- a/html/resume/resume.css
+++ b/html/resume/resume.css
@@ -61,6 +61,7 @@ main .center::after {
   float: left;
   margin: 0 20px 0 0;
   border-radius: 50%;
+  object-fit: cover;
 }
 .base .desc {
   text-align: justify;
